--- a/css/visual-form-builder.css
+++ b/css/visual-form-builder.css
@@ -74,6 +74,7 @@ input.text, textarea.textarea, select.select{
 input.medium, select.medium{width:50%;}
 input.large, select.large, textarea.textarea{width:100%;}
 textarea.medium{height:10em;}
+textarea.large{height:20em;}
 .submit{font-size:1.1em;}
 input.checkbox, input.radio{
 	font-size:1.1em;
@@ -93,3 +94,27 @@ p#form_success{
 	font-weight:bold;
 }
 #ui-datepicker-div { display: none; }
+.ed_button{
+	font-family:Arial,"Bitstream Vera Sans",Helvetica,Verdana,sans-serif;
+	font-size:12px;
+	background-image: -moz-linear-gradient(top, #fcfcfc 0%, #e9e8e8 100%);
+	background-image: -o-linear-gradient(top, #fcfcfc 0%, #e9e8e8 100%);
+	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #fcfcfc), color-stop(1, #e9e8e8));
+	background-image: linear-gradient(top, #fcfcfc 0%, #e9e8e8 100%);
+	min-width:26px;
+	margin:3px 1px 4px;
+	padding:2px 4px;
+	box-shadow:0 1px 0 #e3e3e3;
+	border-radius:3px 3px 3px 3px;
+	border:#C3C3C3 1px solid;
+	text-transform:lowercase;
+}
+.ed_button:hover{
+	background:none repeat scroll 0 0 #dddddd;
+	border-color:#aaaaaa;
+	cursor:pointer;
+}
+.ed_button.ed_bold{font-weight:bold;}
+.ed_button.ed_italic{font-style:italic;}
+.ed_button.ed_link{color:#0000FF;text-decoration:underline;}
+.ed_button.ed_del{text-decoration:line-through;}
