--- a/css/visual-form-builder.css
+++ b/css/visual-form-builder.css
@@ -1,5 +1,5 @@
 form.visual-form-builder{
-	font-family:"Lucida Sans",Lucida Sans Unicode,Verdana,Arial,sans-serif;
+	font-family:inherit;
 	margin:20px 0;
 }
 form.visual-form-builder li{width:auto !important;}
@@ -33,9 +33,8 @@ form.visual-form-builder li{width:auto !important;}
 .visual-form-builder li div label, .visual-form-builder li span label{font-size:90%;}
 .visual-form-builder fieldset{
 	background-color:#eeeeee;
-	-webkit-box-shadow:2px 2px 10px #ADADAD;
-	-moz-box-shadow:2px 2px 10px #ADADAD;
-	box-shadow:2px 2px 10px #ADADAD;
+	border-radius:3px;
+	border:1px solid #D3D3D3;
 	margin:15px 0;
 	clear:both;
 }
@@ -43,7 +42,7 @@ form.visual-form-builder li{width:auto !important;}
 	margin:5px 14px;
 	padding:0 6px;
 	color:#990000;
-	border-bottom:1px dotted #CCCCCC;
+	border-bottom:1px solid #CCCCCC;
 	font-size:inherit;
 }
 .visual-form-builder .legend h3{font-size:20px;}
@@ -67,7 +66,7 @@ label.desc{font-weight:bold;}
 }
 input.text, textarea.textarea, select.select{
 	font-size:100%;
-	font-family:"Lucida Sans",Lucida Sans Unicode,Verdana,Arial,sans-serif;
+	font-family:inherit;
 	margin:0;
 	padding:2px 0;
 }
@@ -118,3 +117,4 @@ p#form_success{
 .ed_button.ed_italic{font-style:italic;}
 .ed_button.ed_link{color:#0000FF;text-decoration:underline;}
 .ed_button.ed_del{text-decoration:line-through;}
+.item-instructions{background-color:#e3e3e3;border-radius:3px;}
