--- a/css/visual-form-builder.css
+++ b/css/visual-form-builder.css
@@ -118,3 +118,10 @@ p#form_success{
 .ed_button.ed_link{color:#0000FF;text-decoration:underline;}
 .ed_button.ed_del{text-decoration:line-through;}
 .item-instructions{background-color:#e3e3e3;border-radius:3px;}
+.section-div{
+	 background-color:#D4D4D4;
+	 border-radius:3px;
+	 padding:10px;
+	 margin:10px 0;
+}
+.section-div h4{font-size:16px;border-bottom:1px solid #BABABA;}
