--- a/css/visual-form-builder.css
+++ b/css/visual-form-builder.css
@@ -10,6 +10,7 @@ form.visual-form-builder li{width:auto !important;}
 	font-size:12px;
 }
 .visual-form-builder li{
+	list-style:none;
 	clear:both;
 	margin:0;
 	padding:6px 1% 9px;
@@ -52,6 +53,16 @@ form.visual-form-builder li{width:auto !important;}
 	padding-bottom:3px;
 	color:#000;
 }
+.visual-form-builder.left-label .desc, .visual-form-builder.right-label .desc{
+	float:left;
+	margin:0 15px 0 0;
+	/*width:31%;*/
+	width:20%;
+}
+.visual-form-builder.right-label .desc{
+	padding-top:2px;
+	text-align:right;
+}
 label.desc{font-weight:bold;}
 .visual-form-builder label.choice{
 	font-size:100%;
@@ -70,8 +81,10 @@ input.text, textarea.textarea, select.select{
 	margin:0;
 	padding:2px 0;
 }
+input.small, select.small{width:25%;}
 input.medium, select.medium{width:50%;}
 input.large, select.large, textarea.textarea{width:100%;}
+textarea.medium{height:5.5em;}
 textarea.medium{height:10em;}
 textarea.large{height:20em;}
 .submit{font-size:1.1em;}
@@ -82,6 +95,28 @@ input.checkbox, input.radio{
 	width:13px;
 	margin:4px 0 0;
 }
+.visual-form-builder li.two-column div span, .visual-form-builder li.three-column div span, .visual-form-builder li.auto-column div span{
+	margin:0 5px 0 0;
+	width:48%;
+}
+.visual-form-builder li.three-column div span{width:30%;}
+.visual-form-builder li.auto-column div span{width:auto;}
+.visual-form-builder li.left-half, .visual-form-builder li.left-third, .visual-form-builder li.left-two-thirds{clear:left;float:left;}
+.visual-form-builder li.right-half, .visual-form-builder li.right-third, .visual-form-builder li.right-two-thirds{clear:none;float:right;}
+.visual-form-builder li.middle-third{clear:none;float:left;margin-left:2%;}
+
+.visual-form-builder li.left-half, .visual-form-builder li.right-half{width:47% !important;}
+.visual-form-builder li.left-third, .visual-form-builder li.middle-third, .visual-form-builder li.right-third{width:30% !important;}
+.visual-form-builder li.left-two-thirds, .visual-form-builder li.right-two-thirds{width:64% !important;}
+
+li.left-half .small, li.left-half .medium, li.left-half .large,
+li.right-half .small, li.right-half .medium, li.right-half .large,
+li.left-third .small, li.left-third .medium, li.left-third .large,
+li.middle-third .small, li.middle-third .medium, li.middle-third .large,
+li.right-third .small, li.right-third .medium, li.right-third .large,
+.visual-form-builder li.left-two-thirds .small, .visual-form-builder li.left-two-thirds .medium, .visual-form-builder li.left-two-thirds .large,
+.visual-form-builder li.right-two-thirds .small, .visual-form-builder li.right-two-thirds .medium, .visual-form-builder li.right-two-thirds .large{width:100%;}
+
 label.error{
 	color:red;
 	font-weight:bold;
@@ -92,7 +127,10 @@ p#form_success{
 	color:green;
 	font-weight:bold;
 }
-#ui-datepicker-div { display: none; }
+#ui-datepicker-div {
+	display: none;
+	font-size:12px;
+}
 .ed_button{
 	font-family:Arial,"Bitstream Vera Sans",Helvetica,Verdana,sans-serif;
 	font-size:12px;
@@ -123,5 +161,15 @@ p#form_success{
 	 border-radius:3px;
 	 padding:10px;
 	 margin:10px 0;
+	 float:left;
+	 width:97%;
 }
 .section-div h4{font-size:16px;border-bottom:1px solid #BABABA;}
+.vfb-clear{
+	clear:both;
+	display:block;
+	height:0;
+	width:0;
+	overflow:hidden;
+	visibility:hidden;
+}
