--- a/css/visual-form-builder.css
+++ b/css/visual-form-builder.css
@@ -2,37 +2,61 @@ form.visual-form-builder{
 	font-family:inherit;
 	margin:20px 0;
 }
-form.visual-form-builder li{width:auto !important;}
-.visual-form-builder ul li{list-style:none;}
+
+form.visual-form-builder li{
+	width:auto !important;
+}
+
 .visual-form-builder ul{
 	list-style:none;
 	margin:0 14px;
 	padding:0;
 	font-size:12px;
 }
-.visual-form-builder li{
-	list-style:none;
-	clear:both;
-	margin:0;
-	padding:6px 1% 9px;
-	width:64%;
-}
-.visual-form-builder li div span, span.full input, span.full select{
+
+	.visual-form-builder li{
+		list-style:none;
+		clear:both;
+		margin:0;
+		padding:6px 1% 9px;
+		width:64%;
+	}
+	
+.visual-form-builder li div span,
+span.full input,
+span.full select{
 	display:block;
 	float:left;
 	width:100%;
 }
-.visual-form-builder span.left{
+
+	.visual-form-builder span.left{
+		float:left;
+		width:48%;
+	}
+	
+	.visual-form-builder span.right{
+		float:right;
+		width:48%;
+	}
+
+.visual-form-builder span.right input,
+.visual-form-builder span.right select,
+.visual-form-builder span.left input,
+.visual-form-builder span.left select{
+	width:100%;
+}
+
+.visual-form-builder span.time{
 	float:left;
-	width:48%;
+	margin:0 0.3em 0 0;
 }
-.visual-form-builder span.right{
-	float:right;
-	width:48%;
+
+.visual-form-builder li div label,
+.visual-form-builder li span label{
+	font-size:90%;
 }
-.visual-form-builder span.right input, .visual-form-builder span.right select, .visual-form-builder span.left input, .visual-form-builder span.left select{width:100%;}
-.visual-form-builder span.time{float:left;margin:0 0.3em 0 0;}
-.visual-form-builder li div label, .visual-form-builder li span label{font-size:90%;}
+
 .visual-form-builder fieldset{
 	background-color:#eeeeee;
 	border-radius:3px;
@@ -40,6 +64,7 @@ form.visual-form-builder li{width:auto !important;}
 	margin:15px 0;
 	clear:both;
 }
+
 .visual-form-builder .legend{
 	margin:5px 14px;
 	padding:0 6px;
@@ -47,28 +72,35 @@ form.visual-form-builder li{width:auto !important;}
 	border-bottom:1px solid #CCCCCC;
 	font-size:inherit;
 }
-.visual-form-builder .legend h3{font-size:20px;}
-.visual-form-builder label, label.desc{
+
+	.visual-form-builder .legend h3{
+		font-size:20px;
+	}
+
+.visual-form-builder label,
+label.desc{
 	display:block;
 	margin:0;
 	padding-bottom:3px;
 	color:#000;
 }
-.visual-form-builder.left-label .desc, .visual-form-builder.right-label .desc{
-	float:left;
-	margin:0 15px 0 0;
-	width:31%;
-	/*width:20%;*/
+
+	.visual-form-builder.left-label .desc,
+	.visual-form-builder.right-label .desc{
+		float:left;
+		margin:0 15px 0 0;
+		width:20%;
+	}
+
+	.visual-form-builder.right-label .desc{
+		padding-top:2px;
+		text-align:right;
+	}
+
+label.desc{
+	font-weight:bold;
 }
-.visual-form-builder.right-label .desc{
-	padding-top:2px;
-	text-align:right;
-}
-.visual-form-builder.left-label li div, .visual-form-builder.right-label li div{
-	float:left;
-	width:65%;
-}
-label.desc{font-weight:bold;}
+
 .visual-form-builder label.choice{
 	font-size:100%;
 	line-height:150%;
@@ -76,44 +108,111 @@ label.desc{font-weight:bold;}
 	padding:0 0 5px;
 	width:88%;
 }
+
 .visual-form-builder label span{
 	color:#BC1212;
 	vertical-align:middle;
 }
-input.text, textarea.textarea, select.select{
+
+input.text,
+textarea.textarea,
+select.select{
 	font-size:100%;
 	font-family:inherit;
 	margin:0;
 	padding:2px 0;
 }
-input.small, select.small{width:25%;}
-input.medium, select.medium{width:50%;}
-input.large, select.large, textarea.textarea{width:100%;}
-.visual-form-builder.left-label .textarea, .visual-form-builder.right-label .textarea{float:left;width:65%;}
-textarea.medium{height:5.5em;}
-textarea.medium{height:10em;}
-textarea.large{height:20em;}
-.submit{font-size:1.1em;}
-input.checkbox, input.radio{
+
+input.small,
+select.small{
+	width:25%;
+}
+
+input.medium,
+select.medium{
+	width:50%;
+}
+
+input.large,
+select.large,
+textarea.textarea{
+	width:100%;
+}
+
+textarea.medium{
+	height:5.5em;
+}
+
+textarea.medium{
+	height:10em;
+}
+
+textarea.large{
+	height:20em;
+}
+
+.submit{
+	font-size:1.1em;
+}
+
+input.checkbox,
+input.radio{
 	font-size:1.1em;
 	display:block;
 	height:13px;
 	width:13px;
 	margin:4px 0 0;
 }
-.visual-form-builder li.two-column div span, .visual-form-builder li.three-column div span, .visual-form-builder li.auto-column div span{
+.visual-form-builder li.two-column div span,
+.visual-form-builder li.three-column div span,
+.visual-form-builder li.auto-column div span{
 	margin:0 5px 0 0;
 	width:48%;
 }
-.visual-form-builder li.three-column div span{width:30%;}
-.visual-form-builder li.auto-column div span{width:auto;}
-.visual-form-builder li.left-half, .visual-form-builder li.left-third, .visual-form-builder li.left-two-thirds{clear:left;float:left;}
-.visual-form-builder li.right-half, .visual-form-builder li.right-third, .visual-form-builder li.right-two-thirds{clear:none;float:right;}
-.visual-form-builder li.middle-third{clear:none;float:left;margin-left:2%;}
 
-.visual-form-builder li.left-half, .visual-form-builder li.right-half{width:47% !important;}
-.visual-form-builder li.left-third, .visual-form-builder li.middle-third, .visual-form-builder li.right-third{width:30% !important;}
-.visual-form-builder li.left-two-thirds, .visual-form-builder li.right-two-thirds{width:64% !important;}
+.visual-form-builder li.three-column div span{
+	width:30%;
+}
+
+.visual-form-builder li.auto-column div span{
+	width:auto;
+}
+
+.visual-form-builder li.left-half,
+.visual-form-builder li.left-third,
+.visual-form-builder li.left-two-thirds{
+	clear:left;
+	float:left;
+}
+
+.visual-form-builder li.right-half,
+.visual-form-builder li.right-third,
+.visual-form-builder li.right-two-thirds{
+	clear:none;
+	float:right;
+}
+
+.visual-form-builder li.middle-third{
+	clear:none;
+	float:left;
+	margin-left:2%;
+}
+
+.visual-form-builder li.left-half,
+.visual-form-builder li.right-half{
+	width:47% !important;
+}
+
+.visual-form-builder li.left-third,
+.visual-form-builder li.middle-third,
+.visual-form-builder li.right-third{
+	width:30% !important;
+}
+
+.visual-form-builder li.left-two-thirds,
+.visual-form-builder li.right-two-thirds{
+	width:64% !important;
+}
 
 li.left-half .small, li.left-half .medium, li.left-half .large,
 li.right-half .small, li.right-half .medium, li.right-half .large,
@@ -121,18 +220,27 @@ li.left-third .small, li.left-third .medium, li.left-third .large,
 li.middle-third .small, li.middle-third .medium, li.middle-third .large,
 li.right-third .small, li.right-third .medium, li.right-third .large,
 .visual-form-builder li.left-two-thirds .small, .visual-form-builder li.left-two-thirds .medium, .visual-form-builder li.left-two-thirds .large,
-.visual-form-builder li.right-two-thirds .small, .visual-form-builder li.right-two-thirds .medium, .visual-form-builder li.right-two-thirds .large{width:100%;}
+.visual-form-builder li.right-two-thirds .small, .visual-form-builder li.right-two-thirds .medium, .visual-form-builder li.right-two-thirds .large{
+	width:100%;
+}
 
 label.error{
 	color:red;
 	font-weight:bold;
 	font-size:90%;
 }
-input.error, select.error, textarea.error{border:1px solid red;}
+
+input.error,
+select.error,
+textarea.error{
+	border:1px solid red;
+}
+
 p#form_success{
 	color:green;
 	font-weight:bold;
 }
+
 #ui-datepicker-div {
 	display: none;
 	font-size:12px;
@@ -152,16 +260,30 @@ p#form_success{
 	border:#C3C3C3 1px solid;
 	text-transform:lowercase;
 }
-.ed_button:hover{
-	background:none repeat scroll 0 0 #dddddd;
-	border-color:#aaaaaa;
-	cursor:pointer;
+	.ed_button:hover{
+		background:none repeat scroll 0 0 #dddddd;
+		border-color:#aaaaaa;
+		cursor:pointer;
+	}
+	.ed_button.ed_bold{
+		font-weight:bold;
+	}
+	.ed_button.ed_italic{
+		font-style:italic;
+	}
+	.ed_button.ed_link{
+		color:#0000FF;
+		text-decoration:underline;
+	}
+	.ed_button.ed_del{
+		text-decoration:line-through;
+	}
+
+.item-instructions{
+	background-color:#e3e3e3;
+	border-radius:3px;
 }
-.ed_button.ed_bold{font-weight:bold;}
-.ed_button.ed_italic{font-style:italic;}
-.ed_button.ed_link{color:#0000FF;text-decoration:underline;}
-.ed_button.ed_del{text-decoration:line-through;}
-.item-instructions{background-color:#e3e3e3;border-radius:3px;}
+
 .section-div{
 	 background-color:#D4D4D4;
 	 border-radius:3px;
@@ -170,7 +292,11 @@ p#form_success{
 	 float:left;
 	 width:97%;
 }
-.section-div h4{font-size:16px;border-bottom:1px solid #BABABA;}
+	.section-div h4{
+		font-size:16px;
+		border-bottom:1px solid #BABABA;
+	}
+	
 .vfb-clear{
 	clear:both;
 	display:block;
