--- a/css/visual-form-builder.css
+++ b/css/visual-form-builder.css
@@ -1,10 +1,12 @@
 form.visual-form-builder{
 	font-family:inherit;
 	margin:20px 0;
+	list-style:none;
 }
 
 form.visual-form-builder li{
 	width:auto !important;
+	list-style:none;
 }
 
 .visual-form-builder ul{
@@ -13,7 +15,11 @@ form.visual-form-builder li{
 	padding:0;
 	font-size:12px;
 }
-
+	
+	.visual-form-builder ul li{
+		list-style: none;
+	}
+	
 	.visual-form-builder li{
 		list-style:none;
 		clear:both;
@@ -47,7 +53,7 @@ span.full select{
 	width:100%;
 }
 
-.visual-form-builder span.time{
+.visual-form-builder span.vfb-time{
 	float:left;
 	margin:0 0.3em 0 0;
 }
@@ -65,7 +71,7 @@ span.full select{
 	clear:both;
 }
 
-.visual-form-builder .legend{
+.visual-form-builder .vfb-legend{
 	margin:5px 14px;
 	padding:0 6px;
 	color:#990000;
@@ -73,35 +79,38 @@ span.full select{
 	font-size:inherit;
 }
 
-	.visual-form-builder .legend h3{
+	.visual-form-builder .vfb-legend h3{
 		font-size:20px;
+		line-height: 2.0em;
+		margin:0;
+		padding:0;
 	}
 
 .visual-form-builder label,
-label.desc{
+label.vfb-desc{
 	display:block;
 	margin:0;
 	padding-bottom:3px;
 	color:#000;
 }
 
-	.visual-form-builder.left-label .desc,
-	.visual-form-builder.right-label .desc{
+	.visual-form-builder.left-label .vfb-desc,
+	.visual-form-builder.right-label .vfb-desc{
 		float:left;
 		margin:0 15px 0 0;
 		width:20%;
 	}
 
-	.visual-form-builder.right-label .desc{
+	.visual-form-builder.right-label .vfb-desc{
 		padding-top:2px;
 		text-align:right;
 	}
 
-label.desc{
+label.vfb-desc{
 	font-weight:bold;
 }
 
-.visual-form-builder label.choice{
+.visual-form-builder label.vfb-choice{
 	font-size:100%;
 	line-height:150%;
 	margin:-17px 0 0 23px;
@@ -114,113 +123,114 @@ label.desc{
 	vertical-align:middle;
 }
 
-input.text,
-textarea.textarea,
-select.select{
+input.vfb-text,
+textarea.vfb-textarea,
+select.vfb-select{
 	font-size:100%;
 	font-family:inherit;
 	margin:0;
 	padding:2px 0;
 }
 
-input.small,
-select.small{
+input.vfb-small,
+select.vfb-small{
 	width:25%;
 }
 
-input.medium,
-select.medium{
+input.vfb-medium,
+select.vfb-medium{
 	width:50%;
 }
 
-input.large,
-select.large,
-textarea.textarea{
+input.vfb-large,
+select.vfb-large,
+textarea.vfb-textarea{
 	width:100%;
 }
 
-textarea.medium{
+textarea.vfb-medium{
 	height:5.5em;
 }
 
-textarea.medium{
+textarea.vfb-medium{
 	height:10em;
 }
 
-textarea.large{
+textarea.vfb-large{
 	height:20em;
 }
 
-.submit{
+.vfb-submit{
+	color:black;
 	font-size:1.1em;
 }
 
-input.checkbox,
-input.radio{
+input.vfb-checkbox,
+input.vfb-radio{
 	font-size:1.1em;
 	display:block;
 	height:13px;
 	width:13px;
 	margin:4px 0 0;
 }
-.visual-form-builder li.two-column div span,
-.visual-form-builder li.three-column div span,
-.visual-form-builder li.auto-column div span{
+.visual-form-builder li.vfb-two-column div span,
+.visual-form-builder li.vfb-three-column div span,
+.visual-form-builder li.vfb-auto-column div span{
 	margin:0 5px 0 0;
 	width:48%;
 }
 
-.visual-form-builder li.three-column div span{
+.visual-form-builder li.vfb-three-column div span{
 	width:30%;
 }
 
-.visual-form-builder li.auto-column div span{
+.visual-form-builder li.vfb-auto-column div span{
 	width:auto;
 }
 
-.visual-form-builder li.left-half,
-.visual-form-builder li.left-third,
-.visual-form-builder li.left-two-thirds{
+.visual-form-builder li.vfb-left-half,
+.visual-form-builder li.vfb-left-third,
+.visual-form-builder li.vfb-left-two-thirds{
 	clear:left;
 	float:left;
 }
 
-.visual-form-builder li.right-half,
-.visual-form-builder li.right-third,
-.visual-form-builder li.right-two-thirds{
+.visual-form-builder li.vfb-right-half,
+.visual-form-builder li.vfb-right-third,
+.visual-form-builder li.vfb-right-two-thirds{
 	clear:none;
 	float:right;
 }
 
-.visual-form-builder li.middle-third{
+.visual-form-builder li.vfb-middle-third{
 	clear:none;
 	float:left;
 	margin-left:2%;
 }
 
-.visual-form-builder li.left-half,
-.visual-form-builder li.right-half{
+.visual-form-builder li.vfb-left-half,
+.visual-form-builder li.vfb-right-half{
 	width:47% !important;
 }
 
-.visual-form-builder li.left-third,
-.visual-form-builder li.middle-third,
-.visual-form-builder li.right-third{
+.visual-form-builder li.vfb-left-third,
+.visual-form-builder li.vfb-middle-third,
+.visual-form-builder li.vfb-right-third{
 	width:30% !important;
 }
 
-.visual-form-builder li.left-two-thirds,
-.visual-form-builder li.right-two-thirds{
+.visual-form-builder li.vfb-left-two-thirds,
+.visual-form-builder li.vfb-right-two-thirds{
 	width:64% !important;
 }
 
-li.left-half .small, li.left-half .medium, li.left-half .large,
-li.right-half .small, li.right-half .medium, li.right-half .large,
-li.left-third .small, li.left-third .medium, li.left-third .large,
-li.middle-third .small, li.middle-third .medium, li.middle-third .large,
-li.right-third .small, li.right-third .medium, li.right-third .large,
-.visual-form-builder li.left-two-thirds .small, .visual-form-builder li.left-two-thirds .medium, .visual-form-builder li.left-two-thirds .large,
-.visual-form-builder li.right-two-thirds .small, .visual-form-builder li.right-two-thirds .medium, .visual-form-builder li.right-two-thirds .large{
+li.vfb-left-half .vfb-small, li.vfb-left-half .vfb-medium, li.vfb-left-half .vfb-large,
+li.vfb-right-half .vfb-small, li.vfb-right-half .vfb-medium, li.vfb-right-half .vfb-large,
+li.vfb-left-third .vfb-small, li.vfb-left-third .vfb-medium, li.vfb-left-third .vfb-large,
+li.vfb-middle-third .vfb-small, li.vfb-middle-third .vfb-medium, li.vfb-middle-third .vfb-large,
+li.vfb-right-third .vfb-small, li.vfb-right-third .vfb-medium, li.vfb-right-third .vfb-large,
+.visual-form-builder li.vfb-left-two-thirds .vfb-small, .visual-form-builder li.vfb-left-two-thirds .vfb-medium, .visual-form-builder li.vfb-left-two-thirds .vfb-large,
+.visual-form-builder li.vfb-right-two-thirds .vfb-small, .visual-form-builder li.vfb-right-two-thirds .vfb-medium, .visual-form-builder li.vfb-right-two-thirds .vfb-large{
 	width:100%;
 }
 
@@ -284,7 +294,7 @@ p#form_success{
 	border-radius:3px;
 }
 
-.section-div{
+.vfb-section-div{
 	 background-color:#D4D4D4;
 	 border-radius:3px;
 	 padding:10px;
@@ -292,9 +302,10 @@ p#form_success{
 	 float:left;
 	 width:97%;
 }
-	.section-div h4{
+	.vfb-section-div h4{
 		font-size:16px;
 		border-bottom:1px solid #BABABA;
+		margin:0;
 	}
 	
 .vfb-clear{
