--- a/css/visual-form-builder.css
+++ b/css/visual-form-builder.css
@@ -29,27 +29,27 @@ form.visual-form-builder li{
 	}
 	
 .visual-form-builder li div span,
-span.full input,
-span.full select{
+span.vfb-full input,
+span.vfb-full select{
 	display:block;
 	float:left;
 	width:100%;
 }
 
-	.visual-form-builder span.left{
+	.visual-form-builder span.vfb-left{
 		float:left;
 		width:48%;
 	}
 	
-	.visual-form-builder span.right{
+	.visual-form-builder span.vfb-right{
 		float:right;
 		width:48%;
 	}
 
-.visual-form-builder span.right input,
-.visual-form-builder span.right select,
-.visual-form-builder span.left input,
-.visual-form-builder span.left select{
+.visual-form-builder span.vfb-right input,
+.visual-form-builder span.vfb-right select,
+.visual-form-builder span.vfb-left input,
+.visual-form-builder span.vfb-left select{
 	width:100%;
 }
 
