--- a/css/visual-form-builder.css
+++ b/css/visual-form-builder.css
@@ -289,7 +289,7 @@ p#form_success{
 		text-decoration:line-through;
 	}
 
-.item-instructions{
+.vfb-item-instructions{
 	background-color:#e3e3e3;
 	border-radius:3px;
 }
