--- a/css/visual-form-builder-admin.css
+++ b/css/visual-form-builder-admin.css
@@ -157,15 +157,21 @@
     margin-left: 150px;
 }
 .vfb-box {
-    border: 1px solid #dfdfdf;
+    position:relative;
+    float:left;
+    padding:0 10px;
+	border: 1px solid #DFDFDF;
     border-radius: 3px 3px 3px 3px;
-    box-shadow: 0 1px 0 #fff inset;
-    background-color: #f5f5f5;
-    background-image: -moz-linear-gradient(center top, #f9f9f9, #f5f5f5);
-    position: relative;
-    padding: 0 10px;
+	background-color: #F5F5F5;
+	background: -moz-linear-gradient(top,  #ffffff 0%, #f5f5f5 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(100%,#f5f5f5));
+	background: -webkit-linear-gradient(top,  #ffffff 0%,#f5f5f5 100%);
+	background: -o-linear-gradient(top,  #ffffff 0%,#f5f5f5 100%);
+	background: -ms-linear-gradient(top,  #ffffff 0%,#f5f5f5 100%);
+	background: linear-gradient(to bottom,  #ffffff 0%,#f5f5f5 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f5f5f5',GradientType=0 );
+    box-shadow: 0 1px 0 #FFFFFF inset;
     line-height: 1.4em;
-    float: left;
 }
 .vfb-box .button-primary {
     float: right;
@@ -416,14 +422,7 @@ a.form-boxes-title {
 }
 .ui-state-disabled .menu-item-handle {
     cursor: default;
-    background: #bbb;
-    background-image: -moz-linear-gradient(top, #fff 0, #bbb 100%);
-    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #fff), color-stop(100%, #bbb));
-    background-image: -webkit-linear-gradient(top, #fff 0, #bbb 100%);
-    background-image: -o-linear-gradient(top, #fff 0, #bbb 100%);
-    background-image: -ms-linear-gradient(top, #fff 0, #bbb 100%);
-    background-image: linear-gradient(to bottom, #fff 0, #bbb 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff', endColorstr='#bbb', GradientType=0);
+    background: #dfdfdf;
 }
 .item-conditional-icon {
     background: url('../images/sprite.png?d=20120921') -10px -1449px no-repeat transparent;
@@ -469,13 +468,6 @@ label.error {
 }
 .menu-item-handle.fieldset, #form-element-fieldset {
     background: #e3e3e3;
-    background-image: -moz-linear-gradient(top, #e3e3e3 0, #ccc 100%);
-    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #e3e3e3), color-stop(100%, #ccc));
-    background-image: -webkit-linear-gradient(top, #e3e3e3 0, #ccc 100%);
-    background-image: -o-linear-gradient(top, #e3e3e3 0, #ccc 100%);
-    background-image: -ms-linear-gradient(top, #e3e3e3 0, #ccc 100%);
-    background-image: linear-gradient(to bottom, #e3e3e3 0, #ccc 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#e3e3e3', endColorstr='#cccccc', GradientType=0);
     box-shadow: 0 1px 0 #e3e3e3 inset;
 }
 .menu-item-handle .item-title {
