--- a/css/visual-form-builder-admin.css
+++ b/css/visual-form-builder-admin.css
@@ -717,200 +717,280 @@ ul.vfb-fields-col-1, ul.vfb-fields-col-2 {
 .static-vars-active {
     display: block;
 }
-.vfb-button {
-    position: relative;
-    overflow: visible;
-    display: inline-block;
-    border: 1px solid #d4d4d4;
+/* !Form Settings buttons */
+.vfb-button { 
+    position: relative; 
+    display: inline-block; 
+    overflow: visible; 
     margin: 0;
-    padding: .5em 2.5em .5em 1em;
-    text-decoration: none;
-    text-shadow: 1px 1px 0 #fff;
-    font: 12px/normal sans-serif;
+	padding:0.5em 2.5em 0.5em 1em; 
+    outline: none; 
+    border: 1px solid #d4d4d4;
+    border-radius: 0.2em;
+    background-color: #f5f5f5;
     color: #333;
-    white-space: nowrap;
+    text-decoration: none; 
+    text-shadow: 1px 1px 0 #fff; 
+    white-space: nowrap; 
+    font:12px/normal sans-serif; 
     cursor: pointer;
-    outline: 0;
-    background-color: #ececec;
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#f4f4f4), to(#ececec));
-    background-image: -moz-linear-gradient(#f4f4f4, #ececec);
-    background-image: -o-linear-gradient(#f4f4f4, #ececec);
-    background-image: linear-gradient(#f4f4f4, #ececec);
+    zoom: 1;
     -webkit-background-clip: padding;
     -moz-background-clip: padding;
-    -o-background-clip: padding-box;
-    -webkit-border-radius: .2em;
-    -moz-border-radius: .2em;
-    border-radius: .2em;
-    zoom: 1;
-    *display: inline;
+    -o-background-clip: padding-box; 
+    *display: inline; 
 }
-.vfb-button:hover, .vfb-button:active, .vfb-button.current {
-    border-color: #3072b3;
-    border-bottom-color: #2a65a0;
-    text-decoration: none;
-    text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.3);
-    color: #fff;
-    background-color: #3072b3;
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#599bdc), to(#3072b3));
-    background-image: -moz-linear-gradient(#599bdc, #3072b3);
-    background-image: -o-linear-gradient(#599bdc, #3072b3);
-    background-image: linear-gradient(#599bdc, #3072b3);
+	
+	.vfb-button:hover,
+	.vfb-button:active,
+	.vfb-button.current {
+	    border-color: #3072b3;
+	    border-bottom-color: #2a65a0;
+	    background-color: #3072b3;
+	    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#599bdc), to(#3072b3));
+	    background-image: -moz-linear-gradient(#599bdc, #3072b3);
+	    background-image: -o-linear-gradient(#599bdc, #3072b3);
+	    background-image: linear-gradient(#599bdc, #3072b3);
+	    color: #fff;
+	    text-decoration: none; 
+	    text-shadow: 0 -1px 0 rgba(0,0,0,0.3);
+	}
+
+	.vfb-button.current{
+		font-weight:bold;
+	}
+
+	.vfb-button::-moz-focus-inner {
+	    padding: 0;
+	    border: 0;
+	}
+	
+	.vfb-button.vfb-delete {
+	    color: #900;
+	}
+
+	.vfb-button.vfb-delete:hover,
+	.vfb-button.vfb-delete:focus,
+	.vfb-button.vfb-delete:active {     
+	    border-color: #b53f3a;
+	    border-bottom-color: #a0302a; 
+	    background-color: #dc5f59;
+	    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#dc5f59), to(#b33630));
+	    background-image: -moz-linear-gradient(#dc5f59, #b33630);
+	    background-image: -o-linear-gradient(#dc5f59, #b33630);
+	    background-image: linear-gradient(#dc5f59, #b33630);
+	    color: #fff;
+	}
+	
+		.vfb-button.vfb-delete:focus,
+		.vfb-button.vfb-delete:active {
+			text-shadow: none;
+		}
+		
+	.vfb-button.vfb-duplicate:hover,
+	.vfb-button.vfb-duplicate:focus,
+	.vfb-button.vfb-duplicate:active {     
+	    border-color: #008e0d;
+	    border-bottom-color: #008e0d;
+	    border-left-color: #82BA0B;
+	    border-radius: 0;
+	    background-color: #82BA0B;
+	    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#7cbc0a), to(#82BA0B));
+	    background-image: -moz-linear-gradient(#7cbc0a, #82BA0B);
+	    background-image: -o-linear-gradient(#7cbc0a, #82BA0B);
+	    background-image: linear-gradient(#7cbc0a, #82BA0B);
+	    color: #fff;
+	}
+	
+		.vfb-button.vfb-duplicate:focus,
+		.vfb-button.vfb-duplicate:active {
+			text-shadow: none;
+		}
+	
+	.vfb-button.vfb-conditional-fields:hover,
+	.vfb-button.vfb-conditional-fields:focus,
+	.vfb-button.vfb-conditional-fields:active {     
+	    border-color: #929292;
+	    border-bottom-color: #929292;
+	    background-color: #eeeeee;
+	    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#eeeeee), to(#cccccc));
+	    background-image: -moz-linear-gradient(#eeeeee, #cccccc);
+	    background-image: -o-linear-gradient(#eeeeee, #cccccc);
+	    background-image: linear-gradient(#eeeeee, #cccccc);
+	    color: #000000;
+	    text-shadow: 1px 0px 0px rgba(255,255,255,1);
+	}
+	
+		.vfb-button.vfb-conditional-fields:focus,
+		.vfb-button.vfb-conditional-fields:active {
+			text-shadow: none;
+		}
+
+	.vfb-button-group{
+		display:inline-block;
+		margin-top:10px;
+		list-style:none;
+	}
+	
+		.rtl .vfb-button-group {
+			margin-left: -2px;
+		}
+	
+	.vfb-button-group .vfb-button{
+		float:left;
+		margin-right: 5px;
+	}
+	
+		.rtl .vfb-button-group .vfb-button {
+			float: right;
+			margin-right: 0;
+			margin-left: 5px;
+		}
+	
+	.vfb-button-group .button-primary {
+		margin-top: 2px;
+	}
+	
+	.button-icon{
+		position:absolute;
+		top:0;
+		right:3px;
+		width:16px;
+		height:24px;
+	}
+	
+	.button-icon.vfb-small-arrow{
+		background:url('../images/arrows.png?d=20121201') no-repeat scroll 0px -118px transparent;
+	}
+	
+	.current .button-icon.vfb-small-arrow {
+	    background: url('../images/arrows.png?d=20120921') no-repeat scroll 0 -30px transparent;
+	}
+	
+	.button-icon.plus {
+	    background: url('../images/sprite.png?d=20120921') no-repeat scroll -12px -644px transparent;
+	}
+	
+	.button-icon.delete {
+	    background: url('../images/sprite.png?d=20120921') no-repeat scroll -12px -671px transparent;
+	}
+	
+#form-settings{
+	display:none;
+	width: 100%;
+	max-width: 460px;
+	margin-bottom: 15px;
 }
-.vfb-button.current {
-    font-weight: bold;
+
+	#form-settings.current{
+		display:block;
+	}
+
+.form-details{
+	padding:20px;
+	background: rgba(255, 255, 255, 0.5);
+	box-shadow: 0px 0px 0px 1px rgba(155,155,155,0.3);
 }
-.vfb-button::-moz-focus-inner {
-    padding: 0;
-    border: 0;
-}
-.vfb-button.vfb-delete {
-    color: #900;
-}
-.vfb-button.vfb-delete:hover, .vfb-button.vfb-delete:focus, .vfb-button.vfb-delete:active {
-    border-color: #b53f3a;
-    border-bottom-color: #a0302a;
-    color: #fff;
-    background-color: #dc5f59;
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#dc5f59), to(#b33630));
-    background-image: -moz-linear-gradient(#dc5f59, #b33630);
-    background-image: -o-linear-gradient(#dc5f59, #b33630);
-    background-image: linear-gradient(#dc5f59, #b33630);
-}
-.vfb-button.vfb-delete:active, .vfb-button.vfb-delete.active {
-    text-shadow: none;
-}
-.vfb-button.vfb-duplicate:hover, .vfb-button.vfb-duplicate:focus, .vfb-button.vfb-duplicate:active {
-    border-color: #008e0d;
-    border-bottom-color: #008e0d;
-    color: #fff;
-    background-color: #82ba0b;
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#7cbc0a), to(#82ba0b));
-    background-image: -moz-linear-gradient(#7cbc0a, #82ba0b);
-    background-image: -o-linear-gradient(#7cbc0a, #82ba0b);
-    background-image: linear-gradient(#7cbc0a, #82ba0b);
-}
-.button-group {
-    display: inline-block;
-    list-style: none;
-    margin-top: 10px;
-}
-.button-group .vfb-button {
-    float: left;
-    margin-left: -1px;
-}
-.vfb-button.vfb-first {
-    border-bottom-right-radius: 0;
-    border-top-right-radius: 0;
-}
-.vfb-button.vfb-last {
-    border-bottom-left-radius: 0;
-    border-top-left-radius: 0;
-}
-.button-icon {
-    width: 18px;
-    height: 24px;
-    position: absolute;
-    top: 0;
-    right: 0;
-}
-.button-icon.arrow {
-    background: url('../images/arrows.png?d=20120921') no-repeat scroll 0 -118px transparent;
-}
-.current .button-icon.arrow {
-    background: url('../images/arrows.png?d=20120921') no-repeat scroll 0 -30px transparent;
-}
-.button-icon.plus {
-    background: url('../images/sprite.png?d=20120921') no-repeat scroll -12px -644px transparent;
-}
-.button-icon.delete {
-    background: url('../images/sprite.png?d=20120921') no-repeat scroll -12px -671px transparent;
-}
-#form-settings {
-    width: 460px;
-    display: none;
-}
-#form-settings.current {
-    display: block;
-}
-.form-details {
-    padding: 20px;
-    background: rgba(255, 255, 255, 0.5);
-    box-shadow: 0 0 0 1px rgba(155, 155, 155, 0.3);
-}
-.form-details.on {
-    display: block;
-}
-.settings-links {
-    background: none repeat scroll 0 0 #f5f5f5;
-    box-shadow: 0 0 0 1px rgba(155, 155, 155, 0.3), 1px 0 0 0 rgba(255, 255, 255, 0.9) inset, 0px 2px 2px rgba(0, 0, 0, 0.1);
-    color: #777;
-    cursor: pointer;
-    display: block;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 15px;
-    font-weight: bold;
-    height: 25px;
-    line-height: 28px;
-    padding: 5px 15px;
+
+	.form-details.on{
+		display:block;
+	}
+
+.settings-links{
     position: relative;
-    text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.8);
-    text-decoration: none;
-    text-transform: uppercase;
     z-index: 1;
-}
-.settings-links .arrow {
-    position: absolute;
-    width: 24px;
-    height: 24px;
-    right: 13px;
-    top: 7px;
-    background: url('../images/arrows.png?d=20120921') no-repeat scroll 8px -278px transparent;
-}
-.settings-links.on .arrow {
-    background: url('../images/arrows.png?d=20120921') no-repeat scroll 8px -252px transparent;
-}
-.settings-links:hover, .settings-links.on {
-    background: #c6e1ec;
-    color: #3d7489;
-    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.6);
-    box-shadow: 0 0 0 1px rgba(155, 155, 155, 0.3), 0px 2px 2px rgba(0, 0, 0, 0.1);
-}
-.vfb-tooltip {
-    position: relative;
-    float: right;
+    display: block;
+    padding: 5px 15px;
+    height: 25px;
+	background:none repeat scroll 0 0 #F5F5F5;
+    box-shadow: 
+		0px 0px 0px 1px rgba(155,155,155,0.3), 
+		1px 0px 0px 0px rgba(255,255,255,0.9) inset, 
+		0px 2px 2px rgba(0,0,0,0.1);
+    color: #777777;
+	text-decoration:none;
+	text-transform:uppercase;
+    text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.8);
+	font-weight:bold;
+    font-size: 15px;
+    font-family:Arial, Helvetica, sans-serif;
+    line-height: 28px;
     cursor: pointer;
-    width: 16px;
-    height: 16px;
-    margin-right: 2px;
 }
-.tooltip {
-    text-indent: 0;
-    z-index: 200;
-    width: 250px;
-    padding: 5px 20px;
-    border-radius: 5px;
-    border: 2px solid #333;
-    box-shadow: 0 0 7px black;
-    background: #222;
-    position: absolute;
-    top: -40px;
-    display: none;
-    font-style: normal;
-    color: white;
+	
+	.settings-links .vfb-large-arrow{
+		position: absolute;
+		top: 7px;
+		right: 13px;
+		width: 24px;
+		height: 24px;
+		background:url('../images/arrows.png?d=20121201') no-repeat scroll 8px -278px transparent;
+	}
+		
+		.rtl .settings-links .vfb-large-arrow {
+			right: auto;
+			left: 13px;
+		}
+		
+		.settings-links.on .vfb-large-arrow{
+			background:url('../images/arrows.png?d=20121201') no-repeat scroll 8px -252px transparent;
+		}
+	
+	.settings-links:hover, .settings-links.on{
+		background: #c6e1ec;
+		box-shadow: 
+			0px 0px 0px 1px rgba(155,155,155,0.3), 
+			0px 2px 2px rgba(0,0,0,0.1);
+		color: #3d7489;
+		text-shadow: 0px 1px 1px rgba(255,255,255, 0.6);
+	}
+
+/* !Help tooltip popups */
+.vfb-tooltip{
+	position:relative;
+	float:right;
+	margin-right:2px;
+	width:16px;
+	height:16px;
+	cursor:pointer;
 }
-.tooltip h3, .vfb-tooltip .tooltip h3 {
-    font-family: sans-serif;
-    font-weight: bold;
-    font-size: 13px;
-    padding: 0 0 6px 0;
-    margin: 5px 0;
-    border-bottom: 1px solid white;
-}
-.tooltip p {
-    font-size: 12px;
-    margin-top: 10px;
-}
+
+	.rtl .vfb-tooltip {
+		float: left;
+		margin-right: 0;
+		margin-left: 2px;
+	}
+	
+	.tooltip {
+		position:absolute;
+		top:-40px;
+		z-index:200;
+		display:none;
+		padding:5px 20px;
+		width:250px;
+		border:2px solid #333;
+		border-radius:5px;
+		background: #222;
+		box-shadow:0 0 7px black;
+		color:white;
+		text-indent:0;
+		font-style:normal;
+	}
+	
+	.tooltip h3,
+	.vfb-tooltip .tooltip h3{
+		margin:5px 0;
+		padding:0 0 6px 0;
+		border-bottom:1px solid white;
+		font-weight:bold;
+		font-size:13px;
+		font-family: sans-serif;
+	}
+	
+	.tooltip p{
+		margin-top:10px;
+		font-size:12px;
+	}
 
 .vfb-export-label {
 	width: 10em;
