Adjust text alignment for promotional links in RTL
git-svn-id: https://plugins.svn.wordpress.org/visual-form-builder/trunk@694811 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/visual-form-builder-admin.css
+++ b/css/visual-form-builder-admin.css
@@ -731,12 +731,13 @@ label.error{
 
 #promote-vfb li {
     padding-left: 20px;
+    text-align: left;
 }
 
 	.rtl #promote-vfb li {
 		padding-left: 0;
-		padding-right: 20px;
-		text-align: left;
+		padding-right: 40px;
+		text-align: right;
 	}
 
 #promote-vfb #twitter {
