--- a/css/visual-form-builder-admin.css
+++ b/css/visual-form-builder-admin.css
@@ -175,9 +175,9 @@
 /* Form Box view */
 #vfb-sidebar,
 #vfb-main{
-	float:left;
-	margin:10px 0;
-	width:100px;
+	float: left;
+	margin: 10px 0;
+	width: 260px;
 }
 
 	.rtl #vfb-sidebar,
@@ -189,7 +189,7 @@
 	width:auto;
 }
 	#vfb-main.vfb-order-type-list{
-		width:100%;
+		width: 100%;
 	}
 	
 	#vfb-main p a,
@@ -206,22 +206,22 @@
 		}
 		
 #vfb-sidebar{
-	margin-left: -150px;
+	margin-left: -300px;
 }
 
 	.rtl #vfb-sidebar {
 		margin-left: 0;
-		margin-right: -150px;
+		margin-right: -300px;
 	}
 
 #vfb-form-list{
 	display: block;
-	margin-left:150px;
+	margin-left: 300px;
 }
 
 	.rtl #vfb-form-list {
 		margin-left: 0;
-		margin-right: 150px;
+		margin-right: 300px;
 	}
 
 .vfb-box {
@@ -781,7 +781,7 @@ label.error{
 #vfb-upgrade-column {
     display: inline;
     float: left;
-    width: 25%;
+    width: auto;
 }
 
 	.rtl #vfb-upgrade-column {
