Update CSS for Fieldset item handle in admin
git-svn-id: https://plugins.svn.wordpress.org/visual-form-builder/trunk@707462 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/visual-form-builder-admin.css
+++ b/css/visual-form-builder-admin.css
@@ -725,9 +725,10 @@ strong .vfb-meta-entries-total span {
 	    margin-top: 5px;
 	}
 	
-	.ui-state-disabled .menu-item-handle {
-	    cursor: default;
-	    background: #dfdfdf;
+	.ui-state-disabled .menu-item-handle{
+		background: #dfdfdf;
+		box-shadow: none;
+		cursor:default;
 	}
 	
 
