- Update submit button name/id attributes to conform to new naming convention - Hide <br> tags in form output for themes that automatically add them
git-svn-id: https://plugins.svn.wordpress.org/visual-form-builder/trunk@741020 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/visual-form-builder.css
+++ b/css/visual-form-builder.css
@@ -18,6 +18,15 @@ form.visual-form-builder li{
 	margin: 0;
 }
 
+/* Hide br tags for themes that auto add them */
+.visual-form-builder br {
+	display: none;
+}
+
+	form.visual-form-builder .vfb-item-instructions br {
+		display: inline;
+	}
+
 /* !Remove list item styles */
 .visual-form-builder ul,
 .entry-content .visual-form-builder ul,
