Update CSS to add border color back to inputs on validation error
git-svn-id: https://plugins.svn.wordpress.org/visual-form-builder/trunk@771827 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/visual-form-builder.css
+++ b/css/visual-form-builder.css
@@ -447,8 +447,14 @@ label.error{
 }
 
 input.error,
+input.vfb-text.error,
+input[type="text"].vfb-text.error,
+input[type="tel"].vfb-text.error,
+input[type="email"].vfb-text.error,
+input[type="url"].vfb-text.error,
 select.error,
-textarea.error{
+textarea.error,
+textarea.vfb-textarea.error,{
 	border:1px solid red;
 }
 
