Update file input styles
git-svn-id: https://plugins.svn.wordpress.org/visual-form-builder/trunk@777249 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/visual-form-builder.css
+++ b/css/visual-form-builder.css
@@ -328,6 +328,14 @@ textarea.vfb-textarea{
 	width:100%;
 }
 
+input[type="file"].vfb-small,
+input[type="file"].vfb-medium,
+input[type="file"].vfb-large {
+	height: auto;
+	line-height: normal;
+}
+
+
 textarea.vfb-medium{
 	height:5.5em;
 }
