Add "Unselect All" link to entries export field selection
git-svn-id: https://plugins.svn.wordpress.org/visual-form-builder/trunk@814372 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/visual-form-builder-admin.css
+++ b/css/visual-form-builder-admin.css
@@ -1497,7 +1497,21 @@ ul.vfb-fields-col-2{
 	border-radius: 3px;
 	margin-left: 10em;
 	padding: 5px;
+	background: white;
 }
+
+#vfb-export-select-all,
+#vfb-export-unselect-all {
+	width: 150px;
+	display: inline-block;
+	text-align: left;
+}
+
+	#vfb-export-unselect-all {
+		text-align: right;
+		margin-left: 5px;
+	}
+
 
 @media print {
     body * {
