Force font size on form item buttons
git-svn-id: https://plugins.svn.wordpress.org/visual-form-builder/trunk@814380 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/visual-form-builder-admin.css
+++ b/css/visual-form-builder-admin.css
@@ -1140,6 +1140,7 @@ ul.vfb-fields-col-2{
 	color:#464646;
 	text-align: left;
 	text-decoration: none;
+	font-size: 12px;
 }
 
 	.rtl .vfb-draggable-form-items {
